--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="style-calendar.css">
   <title>task List</title>
   <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 </head>
@@ -23,6 +24,100 @@
         <button class="delete-button">X</button>
       </li> -->
     </ul>
+
+
+
+    <div class="calendar">
+      <div class="timeline">
+        <div class="spacer"></div>
+        <div class="time-marker">9 AM</div>
+        <div class="time-marker">10 AM</div>
+        <div class="time-marker">11 AM</div>
+        <div class="time-marker">12 PM</div>
+        <div class="time-marker">1 PM</div>
+        <div class="time-marker">2 PM</div>
+        <div class="time-marker">3 PM</div>
+        <div class="time-marker">4 PM</div>
+        <div class="time-marker">5 PM</div>
+        <div class="time-marker">6 PM</div>
+      </div>
+      <div class="days">
+        <div class="day mon">
+          <div class="date">
+            <p class="date-num">9</p>
+            <p class="date-day">Mon</p>
+          </div>
+          <div class="events">
+            <div class="event start-2 end-5 securities">
+              <p class="title">Securities Regulation</p>
+              <p class="time">2 PM - 5 PM</p>
+            </div>
+          </div>
+        </div>
+        <div class="day tue">
+          <div class="date">
+            <p class="date-num">12</p>
+            <p class="date-day">Tue</p>
+          </div>
+          <div class="events">
+            <div class="event start-10 end-12 corp-fi">
+              <p class="title">Corporate Finance</p>
+              <p class="time">10 AM - 12 PM</p>
+            </div>
+            <div class="event start-1 end-4 ent-law">
+              <p class="title">Entertainment Law</p>
+              <p class="time">1PM - 4PM</p>
+            </div>
+          </div>
+        </div>
+        <div class="day wed">
+          <div class="date">
+            <p class="date-num">11</p>
+            <p class="date-day">Wed</p>
+          </div>
+          <div class="events">
+            <div class="event start-12 end-1 writing">
+              <p class="title">Writing Seminar</p>
+              <p class="time">11 AM - 12 PM</p>
+            </div>
+            <div class="event start-2 end-5 securities">
+              <p class="title">Securities Regulation</p>
+              <p class="time">2 PM - 5 PM</p>
+            </div>
+          </div>
+        </div>
+        <div class="day thu">
+          <div class="date">
+            <p class="date-num">12</p>
+            <p class="date-day">Thu</p>
+          </div>
+          <div class="events">
+            <div class="event start-10 end-12 corp-fi">
+              <p class="title">Corporate Finance</p>
+              <p class="time">10 AM - 12 PM</p>
+            </div>
+            <div class="event start-1 end-4 ent-law">
+              <p class="title">Entertainment Law</p>
+              <p class="time">1PM - 4PM</p>
+            </div>
+          </div>
+        </div>
+        <div class="day fri">
+          <div class="date">
+            <p class="date-num">13</p>
+            <p class="date-day">Fri</p>
+          </div>
+          <div class="events">
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+
   </div>
 
   <div class="task-detail-popup">
@@ -103,7 +198,7 @@
     </form>
   </div>
 
-  <script type="module" src="script.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 
 </html>
