feat: move events to correct time on day 1

--- a/index.html
+++ b/index.html
@@ -40,9 +40,13 @@
         <div class="time-marker">4 PM</div>
         <div class="time-marker">5 PM</div>
         <div class="time-marker">6 PM</div>
+        <div class="time-marker">7 PM</div>
+        <div class="time-marker">8 PM</div>
+        <div class="time-marker">9 PM</div>
+        <div class="time-marker">10 PM</div>
       </div>
       <div class="days">
-        <div class="day mon">
+        <div class="day one">
           <div class="date">
             <p class="date-num">9</p>
             <p class="date-day">Mon</p>
@@ -54,7 +58,7 @@
             </div>
           </div>
         </div>
-        <div class="day tue">
+        <div class="day two">
           <div class="date">
             <p class="date-num">12</p>
             <p class="date-day">Tue</p>
@@ -70,7 +74,7 @@
             </div>
           </div>
         </div>
-        <div class="day wed">
+        <div class="day three">
           <div class="date">
             <p class="date-num">11</p>
             <p class="date-day">Wed</p>
@@ -86,7 +90,7 @@
             </div>
           </div>
         </div>
-        <div class="day thu">
+        <div class="day four">
           <div class="date">
             <p class="date-num">12</p>
             <p class="date-day">Thu</p>
@@ -102,10 +106,26 @@
             </div>
           </div>
         </div>
-        <div class="day fri">
+        <div class="day five">
           <div class="date">
             <p class="date-num">13</p>
             <p class="date-day">Fri</p>
+          </div>
+          <div class="events">
+          </div>
+        </div>
+        <div class="day six">
+          <div class="date">
+            <p class="date-num">13</p>
+            <p class="date-day">Sat</p>
+          </div>
+          <div class="events">
+          </div>
+        </div>
+        <div class="day seven">
+          <div class="date">
+            <p class="date-num">13</p>
+            <p class="date-day">Sun</p>
           </div>
           <div class="events">
           </div>
