fix: update calendar day headings

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       <div class="days">
         <div class="day one">
           <div class="date">
-            <p class="date-num">9</p>
-            <p class="date-day">Mon</p>
+            <p class="date-num"></p>
+            <p class="date-day"></p>
           </div>
           <div class="events">
             <div class="event start-2 end-5 securities">
@@ -60,8 +60,8 @@
         </div>
         <div class="day two">
           <div class="date">
-            <p class="date-num">12</p>
-            <p class="date-day">Tue</p>
+            <p class="date-num"></p>
+            <p class="date-day"></p>
           </div>
           <div class="events">
             <div class="event start-10 end-12 corp-fi">
@@ -76,8 +76,8 @@
         </div>
         <div class="day three">
           <div class="date">
-            <p class="date-num">11</p>
-            <p class="date-day">Wed</p>
+            <p class="date-num"></p>
+            <p class="date-day"></p>
           </div>
           <div class="events">
             <div class="event start-12 end-1 writing">
@@ -92,8 +92,8 @@
         </div>
         <div class="day four">
           <div class="date">
-            <p class="date-num">12</p>
-            <p class="date-day">Thu</p>
+            <p class="date-num"></p>
+            <p class="date-day"></p>
           </div>
           <div class="events">
             <div class="event start-10 end-12 corp-fi">
@@ -108,24 +108,24 @@
         </div>
         <div class="day five">
           <div class="date">
-            <p class="date-num">13</p>
-            <p class="date-day">Fri</p>
+            <p class="date-num"></p>
+            <p class="date-day"></p>
           </div>
           <div class="events">
           </div>
         </div>
         <div class="day six">
           <div class="date">
-            <p class="date-num">13</p>
-            <p class="date-day">Sat</p>
+            <p class="date-num"></p>
+            <p class="date-day"></p>
           </div>
           <div class="events">
           </div>
         </div>
         <div class="day seven">
           <div class="date">
-            <p class="date-num">13</p>
-            <p class="date-day">Sun</p>
+            <p class="date-num"></p>
+            <p class="date-day"></p>
           </div>
           <div class="events">
           </div>
