feat: made calendar more modular

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <option value="4h">4 hours</option>
       </select>
 
-      <div class="task-urgency" data-toggle="buttons">
+      <div class="task-urgency">
         <label class="task-urgency-button active">
           <input type="radio" name="task-urgency" id="task-urgency-1"> ASAP
         </label>
