feat: removed placeholder calendar events

--- a/index.html
+++ b/index.html
@@ -25,8 +25,6 @@
       </li> -->
     </ul>
 
-
-
     <div class="calendar">
       <div class="timeline">
         <div class="spacer"></div>
@@ -52,12 +50,7 @@
             <p class="date-num"></p>
             <p class="date-day"></p>
           </div>
-          <div class="events">
-            <div class="event start-2 end-5 securities">
-              <p class="title">Securities Regulation</p>
-              <p class="time">2 PM - 5 PM</p>
-            </div>
-          </div>
+          <div class="events"></div>
         </div>
         <div class="day two">
           <div class="date">
@@ -65,14 +58,6 @@
             <p class="date-day"></p>
           </div>
           <div class="events">
-            <div class="event start-10 end-12 corp-fi">
-              <p class="title">Corporate Finance</p>
-              <p class="time">10 AM - 12 PM</p>
-            </div>
-            <div class="event start-1 end-4 ent-law">
-              <p class="title">Entertainment Law</p>
-              <p class="time">1PM - 4PM</p>
-            </div>
           </div>
         </div>
         <div class="day three">
@@ -80,65 +65,38 @@
             <p class="date-num"></p>
             <p class="date-day"></p>
           </div>
-          <div class="events">
-            <div class="event start-12 end-1 writing">
-              <p class="title">Writing Seminar</p>
-              <p class="time">11 AM - 12 PM</p>
-            </div>
-            <div class="event start-2 end-5 securities">
-              <p class="title">Securities Regulation</p>
-              <p class="time">2 PM - 5 PM</p>
-            </div>
-          </div>
+          <div class="events"></div>
         </div>
         <div class="day four">
           <div class="date">
             <p class="date-num"></p>
             <p class="date-day"></p>
           </div>
-          <div class="events">
-            <div class="event start-10 end-12 corp-fi">
-              <p class="title">Corporate Finance</p>
-              <p class="time">10 AM - 12 PM</p>
-            </div>
-            <div class="event start-1 end-4 ent-law">
-              <p class="title">Entertainment Law</p>
-              <p class="time">1PM - 4PM</p>
-            </div>
-          </div>
+          <div class="events"></div>
         </div>
         <div class="day five">
           <div class="date">
             <p class="date-num"></p>
             <p class="date-day"></p>
           </div>
-          <div class="events">
-          </div>
+          <div class="events"></div>
         </div>
         <div class="day six">
           <div class="date">
             <p class="date-num"></p>
             <p class="date-day"></p>
           </div>
-          <div class="events">
-          </div>
+          <div class="events"></div>
         </div>
         <div class="day seven">
           <div class="date">
             <p class="date-num"></p>
             <p class="date-day"></p>
           </div>
-          <div class="events">
-          </div>
+          <div class="events"></div>
         </div>
       </div>
     </div>
-
-
-
-
-
-
   </div>
 
   <div class="task-detail-popup">
@@ -201,9 +159,9 @@
         let toolbarOptions = [
           // more info here: https://quilljs.com/docs/modules/toolbar/
           ['bold', 'italic', 'underline', 'strike'],        // toggled buttons
-          [{'list': 'ordered'}, {'list': 'bullet'}],
-          [{'indent': '-1'}, {'indent': '+1'}],          // outdent/indent
-          [{'header': [1, 2, 3, 4, 5, 6, false]}],
+          [{ 'list': 'ordered' }, { 'list': 'bullet' }],
+          [{ 'indent': '-1' }, { 'indent': '+1' }],          // outdent/indent
+          [{ 'header': [1, 2, 3, 4, 5, 6, false] }],
         ];
 
         let quill = new Quill('#editor', {
