--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="style-calendar.css">
   <title>task List</title>
   <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 </head>
@@ -23,6 +24,79 @@
         <button class="delete-button">X</button>
       </li> -->
     </ul>
+
+    <div class="calendar">
+      <div class="timeline">
+        <div class="spacer"></div>
+        <div class="time-marker">8 AM</div>
+        <div class="time-marker">9 AM</div>
+        <div class="time-marker">10 AM</div>
+        <div class="time-marker">11 AM</div>
+        <div class="time-marker">12 PM</div>
+        <div class="time-marker">1 PM</div>
+        <div class="time-marker">2 PM</div>
+        <div class="time-marker">3 PM</div>
+        <div class="time-marker">4 PM</div>
+        <div class="time-marker">5 PM</div>
+        <div class="time-marker">6 PM</div>
+        <div class="time-marker">7 PM</div>
+        <div class="time-marker">8 PM</div>
+        <div class="time-marker">9 PM</div>
+        <div class="time-marker">10 PM</div>
+      </div>
+      <div class="days">
+        <div class="day one">
+          <div class="date">
+            <p class="date-num"></p>
+            <p class="date-day"></p>
+          </div>
+          <div class="events"></div>
+        </div>
+        <div class="day two">
+          <div class="date">
+            <p class="date-num"></p>
+            <p class="date-day"></p>
+          </div>
+          <div class="events">
+          </div>
+        </div>
+        <div class="day three">
+          <div class="date">
+            <p class="date-num"></p>
+            <p class="date-day"></p>
+          </div>
+          <div class="events"></div>
+        </div>
+        <div class="day four">
+          <div class="date">
+            <p class="date-num"></p>
+            <p class="date-day"></p>
+          </div>
+          <div class="events"></div>
+        </div>
+        <div class="day five">
+          <div class="date">
+            <p class="date-num"></p>
+            <p class="date-day"></p>
+          </div>
+          <div class="events"></div>
+        </div>
+        <div class="day six">
+          <div class="date">
+            <p class="date-num"></p>
+            <p class="date-day"></p>
+          </div>
+          <div class="events"></div>
+        </div>
+        <div class="day seven">
+          <div class="date">
+            <p class="date-num"></p>
+            <p class="date-day"></p>
+          </div>
+          <div class="events"></div>
+        </div>
+      </div>
+    </div>
   </div>
 
   <div class="task-detail-popup">
@@ -39,7 +113,7 @@
         <option value="4h">4 hours</option>
       </select>
 
-      <div class="task-urgency" data-toggle="buttons">
+      <div class="task-urgency">
         <label class="task-urgency-button active">
           <input type="radio" name="task-urgency" id="task-urgency-1"> ASAP
         </label>
@@ -85,9 +159,9 @@
         let toolbarOptions = [
           // more info here: https://quilljs.com/docs/modules/toolbar/
           ['bold', 'italic', 'underline', 'strike'],        // toggled buttons
-          [{'list': 'ordered'}, {'list': 'bullet'}],
-          [{'indent': '-1'}, {'indent': '+1'}],          // outdent/indent
-          [{'header': [1, 2, 3, 4, 5, 6, false]}],
+          [{ 'list': 'ordered' }, { 'list': 'bullet' }],
+          [{ 'indent': '-1' }, { 'indent': '+1' }],          // outdent/indent
+          [{ 'header': [1, 2, 3, 4, 5, 6, false] }],
         ];
 
         let quill = new Quill('#editor', {
@@ -103,7 +177,7 @@
     </form>
   </div>
 
-  <script type="module" src="script.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 
 </html>
