feat: move task list to sidebar

--- a/index.html
+++ b/index.html
@@ -12,18 +12,17 @@
 
 <body>
 
-  <div class="container">
+  <header>
     <h1>Tasks</h1>
     <input type="button" class="new-task-button" value="New Task">
+  </header>
 
+  <div class="sidebar">
     <ul class="task-list">
-      <!-- dummy item -->
-      <!-- <li class="item" data-key="1594003133171">
-        <input class="checkbox" type="checkbox">
-        Go to Gym
-        <button class="delete-button">X</button>
-      </li> -->
     </ul>
+  </div>
+
+  <div class="main">
 
     <div class="calendar">
       <div class="timeline">
