refactor: new color theme

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <header>
-    <h1>Tasks</h1>
+    <img class="logo" src="media/timeswitcher_logo_white_54h.png" alt="logo" />
     <input type="button" class="new-task-button" value="New Task">
   </header>
 
