style: styling for task list and detail

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
   </div>
 
   <div class="task-detail-popup">
+    <div class="overlay"></div>
     <form class="task-detail">
 
       <input type="text" name="task-name" id="task-name" placeholder="Task name" required>
