feat: Convert task list to sidebar (#3)
* fix: prevent error when too many tasks are created

* feat: move task list to sidebar

* fix: adjust calendar to fit with sidebar better

* feat: remove unnecessary task details from sidebar

* chore: to do update

* feat: sidebar sits below header; header spacing

* feat: break task list into groups

* feat: add color theme

* refactor: new color theme

* style: styling for task list and detail

--- a/index.html
+++ b/index.html
@@ -12,18 +12,17 @@
 
 <body>
 
-  <div class="container">
-    <h1>Tasks</h1>
+  <header>
+    <img class="logo" src="media/timeswitcher_logo_white_54h.png" alt="logo" />
     <input type="button" class="new-task-button" value="New Task">
+  </header>
 
+  <div class="sidebar">
     <ul class="task-list">
-      <!-- dummy item -->
-      <!-- <li class="item" data-key="1594003133171">
-        <input class="checkbox" type="checkbox">
-        Go to Gym
-        <button class="delete-button">X</button>
-      </li> -->
     </ul>
+  </div>
+
+  <div class="main">
 
     <div class="calendar">
       <div class="timeline">
@@ -100,6 +99,7 @@
   </div>
 
   <div class="task-detail-popup">
+    <div class="overlay"></div>
     <form class="task-detail">
 
       <input type="text" name="task-name" id="task-name" placeholder="Task name" required>
