--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF=8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="style-calendar.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>TimeSwitcher</title>
     <link
       href="https://cdn.quilljs.com/1.3.6/quill.snow.css"
